kubernetes/manifests/immich/deployment.yaml
# immich-server Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: immich
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v1.119.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              gpu.intel.com/i915: '1'
              cpu: 4000m
            requests:
              cpu: 200m
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: upload-location
              mountPath: /usr/src/app/upload
              subPath: immich-library
          # env:
          #   - name: IMMICH_WORKERS_INCLUDE
          #     value: 'api'
          readinessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 300
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/server/ping
              port: 2283
            initialDelaySeconds: 300
            periodSeconds: 10
      volumes:
        - name: upload-location
          persistentVolumeClaim:
            claimName: pvc-immich

# Service
---
kind: Service
apiVersion: v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: immich
spec:
  selector:
    app: immich-server
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
  type: ClusterIP
  clusterIP: 10.43.150.101

# immich-machine-learning Deployment
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/name: immich-machine-learning
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v1.118.2-openvino
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              gpu.intel.com/i915: '1'
              cpu: 3000m
            requests:
              cpu: 100m
          volumeMounts:
            - name: model-cache
              mountPath: /cache
          ports:
            - containerPort: 3003
              # readinessProbe:
              #   httpGet:
              #     path: /ping
              #     port: 3003
              #   initialDelaySeconds: 30
              #   periodSeconds: 10
              #   timeoutSeconds: 5
              # livenessProbe:
              #   httpGet:
              #     path: /ping
              #     port: 3003
              #   initialDelaySeconds: 30
              #   periodSeconds: 10
              #   timeoutSeconds: 5
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: pvc-model-cache

# Service
---
kind: Service
apiVersion: v1
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/name: immich-machine-learning
spec:
  selector:
    app: immich-machine-learning
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
  clusterIP: 10.43.150.102

# PostgreSQL Deployment
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-postgres
  namespace: immich
  labels:
    app: immich-postgres
    app.kubernetes.io/instance: immich-postgres
    app.kubernetes.io/name: immich-postgres
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: immich-postgres
          image: docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
          lifecycle:
            preStop:
              exec:
                command:
                  - '/usr/local/bin/pg_ctl'
                  - 'stop'
                  - '-D'
                  - '/var/lib/postgresql/data -w -t 60 -m fast'
          readinessProbe:
            exec:
              command:
                - 'pg_isready'
                - '--dbname=${POSTGRES_DB}'
          livenessProbe:
            exec:
              command:
                - 'pg_isready'
                - '--dbname=${POSTGRES_DB}'
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: pvc-postgres-data

# Service
---
kind: Service
apiVersion: v1
metadata:
  name: immich-postgres
  namespace: immich
  labels:
    app: immich-postgres
    app.kubernetes.io/instance: immich-postgres
    app.kubernetes.io/name: immich-postgres
spec:
  selector:
    app: immich-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
  clusterIP: 10.43.150.104

# Redis Deployment
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-redis
  namespace: immich
  labels:
    app: immich-redis
    app.kubernetes.io/instance: immich-redis
    app.kubernetes.io/name: immich-redis
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: immich-redis
          image: redis:7.4-alpine
          readinessProbe:
            exec:
              command: ['redis-cli', 'ping']
          livenessProbe:
            exec:
              command: ['redis-cli', 'ping']

# Service
---
kind: Service
apiVersion: v1
metadata:
  name: immich-redis
  namespace: immich
  labels:
    app: immich-redis
    app.kubernetes.io/instance: immich-redis
    app.kubernetes.io/name: immich-redis
spec:
  selector:
    app: immich-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
  clusterIP: 10.43.150.103

# Immich ingress
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: immich-server
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
      middlewares:
        - name: default-headers
  tls:
    secretName: home-vijayakumar-xyz
